styling and delete button overflowing bug fixed

--- a/main.css
+++ b/main.css
@@ -17,6 +17,10 @@ header{
     font-size: 10vw;
     text-shadow: 6px 6px 3px rgb(14, 0, 0)
 }
+
+#enter{
+    font-size: inherit;
+}
 .btn-shadow{
     box-shadow: 6px 6px 3px rgb(14, 0, 0);
     text-shadow: 3px 3px 3px rgb(14, 0, 0)
